<resources>
    <string name="app_name">My First App</string>
    <string name="programming_name">Bahasa Pemrograman</string>
    <string name="description">Description</string>
    <string name="detail">Show Details</string>
    <string name="creator">Creator</string>
    <string name="my_name">Ahmad Hanafi</string>
    <string name="my_email">Contaminated007@gmail.com</string>
    <string name="my_links">www.ahanafi.id | www.github.com/ahanafi</string>
    <string name="my_motto">
        ~ "Share what can you share now" ~
    </string>
    <string name="title_activity_detail_item">DetailItemActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="dummy_text">
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, tempore, saepe. Beatae neque debitis, ut vitae deleniti, ex quod, labore ipsa reiciendis error perferendis! Ullam voluptatum cum recusandae! Numquam, inventore.
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel at reiciendis nemo odio repudiandae, reprehenderit dicta autem. Cupiditate autem, in, veritatis adipisci excepturi aut reiciendis ducimus vel at, nihil accusantium!
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos deleniti dolore magnam, quis minima rerum eum reprehenderit quam iste autem nobis dicta totam, mollitia quod qui nostrum earum aliquam quidem!
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia veritatis, explicabo esse nesciunt suscipit dicta optio error eligendi commodi porro, qui consequatur ut et, assumenda reprehenderit dolores unde, vero temporibus.
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae expedita illum vel. Quas fuga saepe autem veritatis placeat at harum debitis vitae provident libero eaque aspernatur iste neque, illum in.
    </string>
    <string name="list">List</string>
    <string name="card">Card View</string>
</resources>
