<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="horizontal"
>
    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/my_picture"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            tools:src="@drawable/author"
            android:src="@drawable/author"
            app:civ_border_width="4dp"
            app:civ_border_color="@color/cardview_shadow_start_color"
            android:layout_centerHorizontal="true"
    />

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/my_picture"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
    >
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_name"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="26sp"
                android:id="@+id/tv_name"
        />

        <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/my_email"
                android:textAlignment="center"
                android:textSize="20sp"
        />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_item_name"
                android:layout_marginTop="60dp"
                android:text="@string/my_links"
                android:textAlignment="center"
                android:textSize="16sp"
        />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_item_name"
                android:layout_marginTop="120dp"
                android:text="@string/my_motto"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="italic"
        />
    </RelativeLayout>

</RelativeLayout>