<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_gravity="center"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginRight="8dp"
        app:cardCornerRadius="4dp"
>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="8dp"
    >
        <ImageView
                android:id="@+id/img_item_icon"
                android:layout_width="150dp"
                android:layout_height="220dp"
                android:layout_marginBottom="4dp"
                android:scaleType="centerCrop"
                tools:color="@color/colorAccent"
            />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_item_name"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginBottom="4dp"
                android:layout_toEndOf="@+id/img_item_icon"
                android:layout_toRightOf="@+id/img_item_icon"
                android:textSize="20sp"
                tools:text="@string/programming_name"
                android:textStyle="bold"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tv_item_description"
                android:layout_above="@+id/layout_button"
                android:layout_below="@+id/tv_item_name"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@+id/img_item_icon"
                android:layout_toRightOf="@+id/img_item_icon"
                android:textSize="16sp"
                tools:text="@string/description"
                android:maxLines="5"
        />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_button"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@+id/img_item_icon"
                android:layout_toRightOf="@+id/img_item_icon"
                android:orientation="horizontal"
        >
            <Button
                    android:id="@+id/button_show_detail"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detail"
                    android:textSize="12sp"
            />
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>